[gd_scene load_steps=2 format=3 uid="uid://cnm4eo181jdj0"]

[ext_resource type="Script" path="res://scene/menu/pausemenu.gd" id="1_y2xq3"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_y2xq3")

[node name="pausemenu456" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="pausemenu456"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.54902)

[node name="CenterContainer" type="CenterContainer" parent="pausemenu456"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="pausemenu456/CenterContainer"]
custom_minimum_size = Vector2(400, 180)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="pausemenu456/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="pausemenu456/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="pausemenu456/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="pausemenu456/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="pausemenu456/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RESUME"

[node name="quit" type="Button" parent="pausemenu456/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "QUIT"

[connection signal="pressed" from="pausemenu456/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pausemenu456/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
